# OOPLabsNSU

./: .gitignore  ReadMe.md
GameOfLife/: CMakeLists.txt
GameOfLife/src/: Grid.cpp  Grid.h  Simulation.cpp  Simulation.h  main.cpp
GameOfLife/tests/: test_simulation.cpp
lab0a/: CMakeLists.txt  main.cpp
lab0b/: CMakeLists.txt  main.cpp
lab1a/: BitArray.cpp  BitArray.h  CMakeLists.txt  main.cpp  test_main.cpp
lab2a/src/: main.cpp
